Add auth boilerplate
